--- a/app/ui/templates/ui/main.html
+++ b/app/ui/templates/ui/main.html
@@ -10,7 +10,7 @@
             {% include 'ui/nav.html' %}
         {% endblock %}
 
-        <div>
+        <div style="margin-top: 20px">
             {% block content %}{% endblock %}
         </div>
     </body>
