--- a/app/ui/templates/ui/nav.html
+++ b/app/ui/templates/ui/nav.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-lg">
     <a class="navbar-brand" href="{% url 'ui:index' %}">Онлайн-кинотеатр</a>
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="{% url 'ui:hd_movies' %}">Фильмы в HD</a>
+      </li>
+    </ul>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
