--- a/app/ui/templates/ui/hd_movies.html
+++ b/app/ui/templates/ui/hd_movies.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <div class="container-lg">
-        Смотрите фильмы в HD!
+        У вас есть доступ на просмотр фильмов в HD!
     </div>
 {% endblock  %}
