--- a/app/ui/templates/ui/hd_movies.html
+++ b/app/ui/templates/ui/hd_movies.html
@@ -3,16 +3,6 @@
 {% block content %}
     <div class="container-lg">
         <h4 class="mb-3">Фильмы в HD</h4>
-        <div class="row mb-3">
-            {% for movie in movies %}
-                <div class="col-4">
-                    <div class="card shadow border-0 rounded-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ movie }}</h5>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+        <p class="fw-light">Уже скоро!</p>
     </div>
 {% endblock  %}
