--- a/app/ui/templates/ui/profile.html
+++ b/app/ui/templates/ui/profile.html
@@ -12,7 +12,7 @@
             <div class="row mb-3">
                 {% for user_subscription in user_subscriptions %}
                     <div class="col-4">
-                        <div class="card shadow border-0 rounded-3">
+                        <div class="card shadow border-0 rounded-3 h-100">
                             <div class="card-body">
                                 <h5 class="card-title">{{ user_subscription.subscription.name }}</h5>
                                 <p class="card-text">{{ user_subscription.subscription.description }}</p>
@@ -43,7 +43,7 @@
             <div class="row mb-3">
                 {% for subscription in subscriptions %}
                     <div class="col-4">
-                        <div class="card shadow border-0 rounded-3">
+                        <div class="card shadow border-0 rounded-3 h-100">
                             <div class="card-body">
                                 <h5 class="card-title">{{ subscription.name }}</h5>
                                 <p class="card-text">{{ subscription.description }}</p>
