--- a/app/ui/templates/ui/main.html
+++ b/app/ui/templates/ui/main.html
@@ -4,8 +4,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <style r>
+            .rounded-4 {
+                border-radius: 1rem!important;
+            }
+            .rounded-bottom-4 {
+                border-bottom-left-radius: 1rem!important;
+                border-bottom-right-radius: 1rem!important;
+            }
+        </style>
     </head>
-    <body>
+
+    <body class="bg-light">
         {% block nav %}
             {% include 'ui/nav.html' %}
         {% endblock %}
