--- a/app/ui/templates/ui/login.html
+++ b/app/ui/templates/ui/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="container-lg" style="max-width:400px">
-        <div class="card shadow border-0 rounded-3 p-3">
+        <div class="card shadow-sm border-0 rounded-4 p-3">
             <form action="{% url 'ui:login' %}?next={{ request.GET.next|urlencode }}" method="post">
                 {% csrf_token %}
 
@@ -31,7 +31,7 @@
 
                 <input type="hidden" name="next" value={{ request.GET.next }} >
                 
-                <button class="btn btn-lg btn-primary w-100 mb-3" type="submit">{% translate 'Войти' %}</button>
+                <button class="btn btn-lg btn-primary w-100" type="submit">{% translate 'Войти' %}</button>
             </form>
         </div>
     </div>
