--- a/app/ui/templates/ui/nav.html
+++ b/app/ui/templates/ui/nav.html
@@ -5,8 +5,8 @@
     <a class="navbar-brand" href="{% url 'ui:index' %}">{% translate 'Онлайн-кинотеатр' %}</a>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'ui:hd_movies' %}">
-          {% translate 'Фильмы в HD' %}
+        <a class="nav-link active" aria-current="page" href="{% url 'ui:movies' %}">
+          {% translate 'Фильмы' %}
         </a>
       </li>
     </ul>
