--- a/app/ui/templates/ui/main.html
+++ b/app/ui/templates/ui/main.html
@@ -5,12 +5,23 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <style r>
+            :root {
+                --border-radius-xl: 1rem;
+            }
             .rounded-4 {
-                border-radius: 1rem!important;
+                border-radius: var(--border-radius-xl);
+            }
+            .rounded-top-4 {
+                border-top-left-radius: var(--border-radius-xl) !important;
+                border-top-right-radius: var(--border-radius-xl) !important;
             }
             .rounded-bottom-4 {
-                border-bottom-left-radius: 1rem!important;
-                border-bottom-right-radius: 1rem!important;
+                border-bottom-left-radius: var(--border-radius-xl) !important;
+                border-bottom-right-radius: var(--border-radius-xl) !important;
+            }
+            .card-img-top {
+                object-fit: cover;
+                max-height: 250px;
             }
         </style>
     </head>
