--- a/app/ui/templates/ui/main.html
+++ b/app/ui/templates/ui/main.html
@@ -23,6 +23,14 @@
                 object-fit: cover;
                 max-height: 250px;
             }
+            .movie-description {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 5;
+                        line-clamp: 5; 
+                -webkit-box-orient: vertical;
+            }
         </style>
     </head>
 
