--- a/app/ui/templates/ui/movies.html
+++ b/app/ui/templates/ui/movies.html
@@ -14,7 +14,7 @@
                         {% endwith %}
                         <div class="card-body">
                             <h5 class="card-title">{{ movie.name }}</h5>
-                            <p class="card-text">{{ movie.description }}</p>
+                            <p class="card-text movie-description">{{ movie.description }}</p>
                         </div>
                         <ul class="list-group list-group-flush border-top rounded-bottom-4">
                             <li class="list-group-item">
