--- a/app/ui/templates/ui/movie.html
+++ b/app/ui/templates/ui/movie.html
@@ -10,7 +10,7 @@
             {% translate 'Ваш браузер не поддерживает данный формат видео.' %}
         </video>
 
-        <div class="card shadow-sm border-0 rounded-4 h-100">
+        <div class="card shadow-sm border-0 rounded-4 h-100 mb-3">
             <div class="card-body">
                 <p class="card-text movie-description">{{ movie.description }}</p>
             </div>
