movie.html "Back to movies" added

--- a/app/ui/templates/ui/movie.html
+++ b/app/ui/templates/ui/movie.html
@@ -4,6 +4,12 @@
 
 {% block content %}
     <div class="container-lg">
+        <a class="btn btn-outline-primary mb-3" href="{% url 'ui:movies' %}" role="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+            </svg>
+            {% translate 'К списку фильмов' %}
+        </a>
         <h4 class="mb-3">{{ movie.name }} <span class="badge {% get_bg_by_quality quality %}">{{ quality|upper }}</span></h4>
         <video class="w-100 rounded-4 mb-3" height="540" controls>
             <source type="video/mp4">
