--- a/app/ui/templates/ui/nav.html
+++ b/app/ui/templates/ui/nav.html
@@ -31,7 +31,7 @@
             </li>
           {% else %}
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'ui:login' %}">
+              <a class="nav-link active" aria-current="page" href="{% url 'ui:login' %}?next={{ request.get_full_path|urlencode }}">
                 {% translate 'Войти' %}
               </a>
             </li>
